--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 
 <body background="baground.jpg">
 <center>
-  <h3 class="btn btn-info heading">Changing width, height and postion of the text in Realtime
+  <h3 class="btn btn-info heading">font manipulatar
     <br>
     <span class="note">NOTE - Get your left and right wrist closer 
       to reduce the size of the text and to increase the size of 
       the text keep your left and right wrist far from each other. 
       Move you nose to move the text</span>
     <br>
-
+    <span id="font_size"></span>
   </h3>
 </center>
 
-<span id="sp"></span>
+
 <div class="copy_right_footer">
   Developed by - Krishna Brijesh
 </div>
